@@ -71,6 +71,8 @@
 	 (string-match qualifier (or erc-server-announced-name
 				     erc-session-server)))))
 
+(defvar erc-modified-channels-alist)
+
 (define-ibuffer-column erc-modified (:name "M")
   (if (and (boundp 'erc-track-mode)
 	   erc-track-mode)
